<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_CylinderSettings" Id="{36157f3e-6abe-0e50-0b19-700e9847ab60}">
    <Declaration><![CDATA[TYPE ST_CylinderSettings :
STRUCT
	sIdA:					STRING(25):= 'A1';
	sIdB:					STRING(25):= 'B1';
	tDebounceA:				TIME:= T#50MS;
	tDebounceB:				TIME:= T#50MS;
	tTimeout:				TIME:= T#5000MS;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>